completing the followers only and notifications for follow requests logic